added bibliography log files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 mental-model-paper/*.aux
 mental-model-paper/*.log
 mental-model-paper/*.synctex.gz
+mental-model-paper/*.bbl
+mental-model-paper/*.blg
 usability-study/*.aux
 usability-study/*.log
 usability-study/*.synctex.gz
